test/cases/compile_errors/stage1/obj/implicit_semicolon-while_expression.zig
export fn entry() void {
    _ = while(true) {};
    var good = {};
    _ = while(true) {}
    var bad = {};
}

// error
// backend=stage1
// target=native
//
// tmp.zig:4:23: error: expected ';' after statement
